--- a/Java20250604_1_중첩클래스/.project
+++ b/Java20250604_1_중첩클래스/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java20250604_중첩클래스</name>
+	<name>Java20250604_1_중첩클래스</name>
 	<comment></comment>
 	<projects>
 	</projects>
